Reduce compiler allocation and record performance findings